# python-template

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  Makefile  README.rst  README.template.rst  pyproject.toml  requirements.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/linters/: .hadolint.yaml  .isort.cfg  .yaml-lint.yml
.github/temp/: pr_pages_qc.yml
.github/workflows/: codeql-analysis.yml  lint.yml  merge_pages.yml  merge_release.yml  pages.yml  pages_qc.yml  pr_lint.yml  pr_pages_qc.yml  pr_release.yml  pr_test.yml  run-tests.yml  test.yml
assets/dockerfile/root/: .bashrc
assets/template/: README.rst  index.rst  template.py  template.yml  template_custom.yml  template_orig.yml
config/dockerfile/root/: .bashrc
config/logger/: logger.yml
docsrc/: api.rst  build  conf.py  index.rst
python_template/: pet_sounds.py
python_template/utils/: logger.py  yaml_handler.py
tests/: test_pet_sound.py
tests/unit/: test_pet_sounds.py
tests/unit/utils/: foo  test_yaml_handler.py
