[project]
name = "python-template"
version = "0.0.4"
license = "MIT"
authors = [
    {name = "Andrew Noble", email = "andrew.e.noble@gmail.com"},
]
description = "Python Template"
repository = "https://github.com/andrewenoble-org/python-template"
readme = "README.rst"
requires-python = "<3.11,>=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = []

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

# Development Environment dependencies
[project.optional-dependencies]
dev = [
    "numpydoc",
    "sphinx_rtd_theme",
    "pre-commit",
    "pytest",
    "pytest-cov",
]

# Black formatting
[tool.black]
line-length = 88
include = '\.pyi?$'
# exclude a few common directories
exclude = '''
/(
    .eggs
  | .git
  | .hg
  | .mypy_cache
  | .tox
  | .venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

# iSort formatting
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
virtual_env = "venv"
